--- a/install.txt
+++ b/install.txt
@@ -22,8 +22,9 @@ openssl req -new -x509 -sha256 -days 365 -nodes -out /opt/zimbradmin/ssl/certif-
 
 #--------------------------------------------------------------------------
 # installation de node.js
-# Note the new setup script name for Node.js v0.12
-curl -sL https://deb.nodesource.com/setup_0.12 | bash -
+# Note the new setup script name for Node.js V4.
+curl -sL https://deb.nodesource.com/setup_4.x | bash -
+
 
 # Then install with:
 #on installe node
